log/build_2025-07-31_14-26-44/new_package/stderr.log
  File "/home/hacker/ros2_fws/install/new_package/lib/python3.10/site-packages/new_package/servo_motor_service.py", line 12
    GPIO setup
         ^^^^^
SyntaxError: invalid syntax

